--- a/style.css
+++ b/style.css
@@ -454,6 +454,9 @@ footer{
         font-size: 1.5rem;
         color: rgb(185, 135, 135);
     }
+    .bg-text{
+        font-size: 1.5rem;
+    }
     nav ul li{
         list-style: none;
         margin: 0 14px;
@@ -477,7 +480,7 @@ footer{
     }
 
     .main h1{
-        margin-left: -110px;
+/*         margin-left: -110px; */
     }
     .main h1 .text-primary{
         font-size: 35px;
@@ -493,6 +496,10 @@ footer{
         border: solid  1px rgb(185, 135, 135);
         border-radius: 50%;
     }
+    .skill-head{
+        font-size: 1.5rem;
+    }
+        
 }
 
 
