--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ nav ul li{
     border: solid black;
     border-radius: 1rem;
     background-color: white;
-    min-height: 600px;
+    min-height: 500px;
     width: 300px;
 }
 .skill-box-head{
@@ -199,10 +199,11 @@ nav ul li{
 }
 .skill-detail{
     background-color: rgb(188, 142, 142);
-    margin-top: 20px;
+    margin-top: 16px;
     width: 220px;
-    min-height: 40px;
-    border-radius: 60%;
+    min-height: 35px;
+    border:2px solid;
+    border-radius: 10px;
     
     display: flex;
     
@@ -271,6 +272,11 @@ nav ul li{
 .projectkeniche{
     height: 200px;
     width: 400;
+}
+.link-col{
+    color: rgb(94, 97, 104);
+    font-size: 18px;
+    font-weight: 700;
 }
 
 /* contact */
